--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div class="start-content">
                 <h1>🌍 NaturalWorld <span class="by-author">by Joey</span></h1>
                 <p>Welcome to your adventure! Explore different worlds and reach the end of the map.</p>
+                <div class="browser-hint">
+                    <p>💻 <strong>Best played on computer browser</strong> for optimal experience</p>
+                </div>
                 <div class="character-setup">
                     <label for="characterName">Enter your character's name:</label>
                     <input type="text" id="characterName" maxlength="15" placeholder="Hero">
